Address code review comments [skip travis]